@@ -3916,7 +3916,7 @@ Tcl_LsortObjCmd(
 		    ckfree((char *) sortInfo.indexv);
 		}
 		Tcl_AppendResult(interp,
-			"\"-command\" option must be followed ",
+			"\"-command\" option must be followed "
 			"by comparison command", NULL);
 		return TCL_ERROR;
 	    }
@@ -3941,7 +3941,7 @@ Tcl_LsortObjCmd(
 		ckfree((char *) sortInfo.indexv);
 	    }
 	    if (i == (objc-2)) {
-		Tcl_AppendResult(interp, "\"-index\" option must be ",
+		Tcl_AppendResult(interp, "\"-index\" option must be "
 			"followed by list index", NULL);
 		return TCL_ERROR;
 	    }
