@@ -28,6 +28,16 @@
 	* doc/Notifier.3: Documented Tcl_SetNotifier and
 	Tcl_ServiceModeHook. Quite against my better judgment.
 	[Bug 414933]
+	* generic/tclBasic.c:
+	* generic/tclCkalloc.c:
+	* generic/tclClock.c:
+	* generic/tclCmdIL.c:
+	* generic/tclCmdMZ.c:
+	* generic/tclFCmd.c:
+	* generic/tclFileName.c:
+	* generic/tclIO.c:
+	* generic/tclInterp.c: Replaced commas in varargs with string
+	                       concatenation where possible. [Patch 1515234]
 	
 2007-04-19  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
